Remove inappropriate title attributes from block container elements

--- a/template/default.html
+++ b/template/default.html
@@ -150,7 +150,7 @@
         </section>$endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
-        <nav id="navigation" title="Website Navigation: Top of Page">
+        <nav id="navigation">
           <svg id="navigation-left" ><use href="/static/img/ornament/sequential-nav-icons-arabesque.svg#direction" /></svg>
           <a id="navigation-center" class="link-page-not" title="Return to top of current page" href="#top"
             ><svg><use href="/static/img/ornament/sequential-nav-icons-arabesque.svg#center" /></svg></a>
@@ -175,7 +175,7 @@
 
       </article>
 
-      <div id="footer-decoration-container" title="Home Page">
+      <div id="footer-decoration-container">
         <a rel="home me contents" title="Gwern.net homepage" class="footer-logo" href="/index">​</a>
       </div>
     </main>
