--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1660,7 +1660,7 @@ figure.width-full {
 #markdownBody .marginnote.sidenote:hover {
     box-shadow: none;
 }
-/*	Make links in margin notes (somewhat unusual but should be supported simply 
+/*	Make links in margin notes (somewhat unusual but should be supported simply
 	because that’s what one would expect) clickable/hover-able.
  */
 #markdownBody .marginnote.sidenote::after {
@@ -1843,33 +1843,56 @@ a code {
     font-variant-caps: normal;
 }
 
-/*	Recently-modified link icons.
+/*	Inline SVG icons: recently-modified link icons, and theme-toggle SVG icons.
+    (These need to be in initial.css because they are used in the opening paragraphs of /index.)
  */
 .has-recently-modified-icon .recently-modified-icon-hook,
-.icon-single-white-star-on-black-circle {
-	padding-left: 0.85em;
-	position: relative;
-	background-color: var(--link-underline-background-color);
+.icon-single-white-star-on-black-circle,
+.icon-moon-solid,
+.icon-book-open-solid,
+.icon-message-slash-solid,
+.icon-magnifying-glass,
+.icon-gear-solid { position: relative;
+    background-color: var(--link-underline-background-color); }
+
+.has-recently-modified-icon .recently-modified-icon-hook,
+.icon-single-white-star-on-black-circle { padding-left: 0.85em; }
+
+.icon-moon-solid,
+.icon-book-open-solid,
+.icon-message-slash-solid,
+.icon-gear-solid { padding: 0.35em;
+				    opacity: 65%; }
+.icon-magnifying-glass { padding: 0.5em;
+						 opacity: 90%; }
+.has-recently-modified-icon .recently-modified-icon-hook::before,
+.icon-single-white-star-on-black-circle::before,
+.icon-moon-solid::before,
+.icon-book-open-solid::before,
+.icon-message-slash-solid::before,
+.icon-magnifying-glass::before,
+.icon-gear-solid::before {
+    content: "";
+    background-repeat: no-repeat;
+    background-position: center left;
+    position: absolute;
+    top: 0.05em;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .has-recently-modified-icon .recently-modified-icon-hook::before,
 .icon-single-white-star-on-black-circle::before {
-	content: "";
-	background-image: var(--GW-image-single-white-star-on-black-circle-svg);
-	background-size: 0.65em 100%;
-	background-repeat: no-repeat;
-	background-position: center left;
-	position: absolute;
-	top: 0.05em;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0.75;
+    background-image: var(--GW-image-single-white-star-on-black-circle-svg);
+    background-size: 0.65em 100%;
+    opacity: 0.75;
 }
-
-.icon-single-white-star-on-black-circle::before {
-	background-position: center;
-}
-
+.icon-single-white-star-on-black-circle::before { background-position: center; }
+.icon-moon-solid::before { background-image: url('/static/img/icon/icons.svg?v=1725950287#moon-solid'); }
+.icon-book-open-solid::before { background-image: url('/static/img/icon/icons.svg?v=1725950287#book-open-solid'); }
+.icon-message-slash-solid::before { background-image: url('/static/img/icon/icons.svg?v=1725950287#message-slash-solid'); }
+.icon-magnifying-glass::before { background-image: url('/static/img/icon/icons.svg?v=1725950287#magnifying-glass'); }
+.icon-gear-solid::before { background-image: url('/static/img/icon/icons.svg?v=1725950287#gear-solid'); }
 
 /*************/
 /* SIDENOTES */
