--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -942,7 +942,7 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 .icon-single-white-star-on-black-circle::before,
 .manicule, .icon-manicule-right, .icon-single-white-star-on-black-circle,
 .icon-moon-solid, .icon-book-open-solid, .icon-message-slash-solid,
-.icon-magnifying-glass, .icon-gear-solid {
+.icon-magnifying-glass, .icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid {
     filter: invert(1);
 }
 
@@ -960,6 +960,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
     background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1727622577">
-<script src="/static/js/head.js?v=1727622577"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1727623348">
+<script src="/static/js/head.js?v=1727623348"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1725950287" as="image">
