--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1859,9 +1859,11 @@ a code {
 .icon-single-white-star-on-black-circle { padding-left: 0.85em; }
 
 .icon-moon-solid, .icon-book-open-solid, .icon-message-slash-solid,
-.icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid { padding: 0.35em;
+.icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid { margin: 0.1em;
+                                                           padding: 0.4em;
                                                            opacity: 70%; }
-.icon-magnifying-glass { padding: 0.5em;
+.icon-magnifying-glass { margin: 0.1em;
+                         padding: 0.5em;
                          opacity: 90%; }
 .has-recently-modified-icon .recently-modified-icon-hook::before,
 .icon-single-white-star-on-black-circle::before, .icon-moon-solid::before,
